# heat-CI

./: .gitignore  .gitlab-ci-clang.yml  .gitlab-ci-gcc.yml  .gitlab-ci.yml  CMakeLists.txt  CTestConfig.cmake  Dockerfile  Jenkinsfile  README.md  cdash_heat.sh  heat_par.c  heat_plot.py  heat_seq.c  mat_utils.c  mat_utils.h  test_heat_plot.py
cmake_modules/: cmake_uninstall.cmake.in
doc/: CMakeLists.txt  Doxyfile.in
include/: heat.h
lib/: CMakeLists.txt  heat.c
tools/: analysis.sh  build-test.sh  dash.cmake  dash_mpi.cmake  dockerfile-envci  heat-valgrind.supp
